GTHB-10 | Minor updates around the application
Signed-off-by: Adeola Adeyemo <adeola.adeyemoj@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
         <article>
           <h1>Let's get started</h1>
           <label for="github-username">Github Username</label>
-          <input placeholder="Enter a username" id="github-username" class="login-generator__input" id="login-generator__input" />
+          <input
+            placeholder="Enter a username"
+            id="github-username"
+            class="login-generator__input"
+            id="login-generator__input"
+          />
           <button type="button" class="login-generator__button">Proceed</button>
         </article>
       </section>
@@ -247,7 +252,7 @@
           </section>
 
           <section class="main-section--right">
-            <div class="subnav-wrapper mobile-subnav px-1">
+            <div class="subnav-wrapper mobile-subnav px-1 sticky-container">
               <nav class="subnav row">
                 <button>
                   <svg height="16" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true">
